# crosswords

./: .gitignore  borsh-article.md  readme.md
archive/hello-world-contract/: Cargo.toml
cw-client/: dealerkeypair.json  package-lock.json  package.json  userkeypair.json  userkeypair1.json  userkeypair2.json
cw-client/src/: demonstration.ts  hello_world_index.ts  index.ts
cw-contract/: Cargo.toml
cw-contract/src/: lib.rs
